# Nypus_CrewAI_Projects

./: README.md  agents.py  main.py  pyproject.toml  tasks.py
tools/: custom_tools.py  file_tools.py  website_search_tool.py
